# openperps-launchpad

./: .gitignore  README.md
app/: .env.example  index.html  package-lock.json  package.json
app/src/: main.tsx  polyfills.ts  styles.css
app/src/components/openperps/: CurvePanel.tsx  NetworkSelector.tsx  OrderPanel.tsx
app/src/launchpad/: Coin.tsx  CoinChart.tsx  Create.tsx  Home.tsx  LaunchpadApp.tsx  Profile.tsx  lib.ts  useHashRoute.ts
app/src/lib/: collateral.ts  curve.ts  indexer.ts  onchain.ts  program.ts  registry.ts  sessionKey.ts  sharedMarket.ts  types.ts
app/src/lib/flows/: placeOrderFlow.ts  portfolioFlows.ts
app/src/lib/launch/: bondingLaunch.ts  curveGraduate.ts  ipfs.ts  native.ts  providers.ts  raydiumCpmm.ts  spotPool.ts  types.ts  vanityWorker.ts
program/: Cargo.toml
program/src/: lib.rs
